--- a/templates/base.html
+++ b/templates/base.html
@@ -35,11 +35,20 @@
                 <a class="nav-link" href="{% url 'posts_list' %}">Posts</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a>
+            </li>                
+            {% if user.is_authenticated %}
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'post_new' %}">Create</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a>
-            </li>                
+                <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Log In</a>
+            </li>
+            {% endif %}
             </ul>
         </div>
         </div>
