--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -14,10 +14,12 @@
                 <h6 class="card-subtitle mb-2 text-muted text-dark">Author: {{ post.Author }}</h6>
                 <p>{{post.body}}</p>
                 <p>{{ post.created_on }}</p>
-                <a href="{% url 'post_edit' post.id %}">Edit Post</a> |
-                <a href="{% url 'post_delete' post.id %}">Delete</a>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'post_edit' post.id %}" class="btn btn-primary">Edit Post</a>
+                    <a href="{% url 'post_delete' post.id %}" class="btn btn-danger">Delete</a>
+                {% endif %}
+                <a class="btn btn-warning" href="{% url 'posts_list' %}">POSTS!!</a>
             </div>
-            <a class="btn btn-warning" href="{% url 'posts_list' %}">Click Here to See the Competition!!</a>
         </div>
     </div>
 {% endblock content %}
