--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -9,11 +9,11 @@
     <div class="detail">
         <div class="card" style="width: 1000px;">
             <div class="card-body">
-                <h6 class="card-title text-dark">Post #: {{ post.id }}</h6>
-                <h5 class="card-title text-dark">Title: {{ post.title }}</h5>
-                <h6 class="card-subtitle mb-2 text-muted text-dark">Author: {{ post.Author }}</h6>
-                <p>{{post.body}}</p>
-                <p>{{ post.created_on }}</p>
+                <h6 class="card-title text-light">Post #: {{ post.id }}</h6>
+                <h5 class="card-title text-light">Title: {{ post.title }}</h5>
+                <h6 class="card-subtitle mb-2 text-muted text-light">Author: {{ post.Author }}</h6>
+                <p class="card-subtitle mb-2 text-light">{{post.body}}</p>
+                <p class="card-subtitle mb-2 text-muted text-light">{{ post.created_on }}</p>
                 {% if user.is_authenticated %}
                     <a href="{% url 'post_edit' post.id %}" class="btn btn-primary">Edit Post</a>
                     <a href="{% url 'post_delete' post.id %}" class="btn btn-danger">Delete</a>
