--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -11,7 +11,7 @@
             <div class="card-body">
                 <h6 class="card-title text-light">Post #: {{ post.id }}</h6>
                 <h5 class="card-title text-light">Title: {{ post.title }}</h5>
-                <h6 class="card-subtitle mb-2 text-muted text-light">Author: {{ post.Author }}</h6>
+                <h6 class="card-subtitle mb-2 text-muted text-light">Author: {{ post.author }}</h6>
                 <p class="card-subtitle mb-2 text-light">{{post.body}}</p>
                 <p class="card-subtitle mb-2 text-muted text-light">{{ post.created_on }}</p>
                 {% if user.is_authenticated %}
