--- a/templates/posts/list.html
+++ b/templates/posts/list.html
@@ -12,7 +12,7 @@
         <div class="card-body">
             <h6 class="card-title text-light">Post #: {{ post.id }}</h6>
             <h5 class="card-title text-light">Title: {{ post.title }}</h5>
-            <h6 class="card-subtitle mb-2 text-muted text-light">Author: {{ post.Author }}</h6>
+            <h6 class="card-subtitle mb-2 text-muted text-light">Author: {{ post.author }}</h6>
             <p class="card-subtitle mb-2 text-muted text-light">{{post.body|truncatechars:50}}</p>
             <p class="card-subtitle mb-2 text-muted text-light">{{ post.created_on }}</p>
             <a href="{% url 'post_detail' post.id %} " class="card-link text-light">Read More</a>
