Added Password Reset

--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -10,6 +10,7 @@
         <div class="card" style="width: 1000px;">
             <div class="card-body">
                 <h6 class="card-title text-light">Post #: {{ post.id }}</h6>
+                <small class="card-subtitle mb-2 text-light">Console: {{ post.theme }}</small>
                 <h5 class="card-title text-light">Title: {{ post.title }}</h5>
                 <h6 class="card-subtitle mb-2 text-muted text-light">Author: {{ post.author }}</h6>
                 <p class="card-subtitle mb-2 text-light">{{post.body}}</p>
