--- a/templates/base.html
+++ b/templates/base.html
@@ -38,12 +38,16 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a>
             </li>                
             {% if user.is_authenticated %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'post_new' %}">Create</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-            </li>
+            <div class="dropdown">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                Account
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="{% url 'post_new' %}">Create</a></li>
+                <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
+                <li><a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a></li>
+                </ul>
+            </div>
             {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'login' %}">Log In</a>
