--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,4 +10,5 @@
         <input type="submit" value="Log In" class="btn btn-success">
         <a href="{% url 'signup' %}"class="btn btn-warning">Sign Up</a>
     </form>
+    <a href="{% url 'password_change' %}">Forgot Password?</a>
 {% endblock content %}
