--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home |Page</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'posts_list' %}">Posts</a>
@@ -51,6 +51,7 @@
             {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                <a class="nav-link" href="{% url 'signup' %}">Signup</a>
             </li>
             {% endif %}
             </ul>
